<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="order_button">Order</string>
    <string name="order_summary">Order Summary</string>
    <string name="initial_quantity">1</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="name">Name</string>
    <string name="thank_you">Thank you</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Liz">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g id="order_whipped_cream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g id="order_chocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="order_quantity">%d</xliff:g></string>
    <string name="order_summary_total">Total: <xliff:g id="order_total">%d</xliff:g></string>
</resources>
