<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:layout_marginBottom="@dimen/margin"
            android:textSize="@dimen/text_size"
            android:textAllCaps="true"
            />

        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textSize="@dimen/text_size"
            android:paddingLeft="@dimen/padding_side"/>

        <CheckBox
            android:id="@+id/whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:textSize="@dimen/text_size"
            android:paddingLeft="@dimen/padding_side"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:textSize="@dimen/text_size"
            android:textAllCaps="true"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:text="+"
                android:onClick="increment"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quantity_text_view"
                android:text="@string/initial_quantity"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size"
                android:layout_marginRight="@dimen/margin_side"
                android:layout_marginLeft="@dimen/margin_side"
                android:layout_marginBottom="@dimen/margin"
                />

            <Button
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:text="-"
                android:onClick="decrement"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_summary"
            android:layout_marginBottom="@dimen/margin"
            android:textAllCaps="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_summary_text_view"
            android:textSize="@dimen/text_size"
            android:layout_marginBottom="@dimen/margin"
            android:textColor="@android:color/black"
            android:text="$0"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_button"
            android:textAllCaps="true"
            android:onClick="submitOrder"/>
    </LinearLayout>
</ScrollView>
